# growth_curves_modeling

./: .gitignore  README.md  pyproject.toml  simulate_data.py  simulation.ipynb  simulation_with_heaviside.ipynb  train_vae.py
evaluation_results/: evaluation_results_20241210_145831.json  evaluation_results_20241210_150231.json  evaluation_results_20241210_153849.json  evaluation_results_20241210_153908.json  evaluation_results_20241210_154755.json  evaluation_results_20241210_154851.json  evaluation_results_20241217_111333.json  evaluation_results_20241217_115534.json  evaluation_results_20241217_115703.json  evaluation_results_20241217_115902.json
mlp_vae_training/: vae_mlp.py
mlp_vae_training_scripts/: data_loading.py  main.py  plotting.py  refactored_vae_mlp.py  training.py  utils.py  vae_mlp_deep.py
mlp_vae_training_scripts/models/: __init__.py
mse_evaluation_results/DeepCNNVAE_LD10_LC16_TS20250127_230619/: DeepCNNVAE_LD10_LC16_TS20250127_230619.json
mse_evaluation_results/DeepCNNVAE_LD10_LC16_TS20250202_184723/: DeepCNNVAE_LD10_LC16_TS20250202_184723.json
mse_evaluation_results/ResidualCNNVAE_LD10_LC16_TS20250127_231532/: ResidualCNNVAE_LD10_LC16_TS20250127_231532.json
mse_evaluation_results/ResidualCNNVAE_LD10_LC16_TS20250202_184546/: ResidualCNNVAE_LD10_LC16_TS20250202_184546.json
parameter_validation/: growth_model.py  main.py
src/: main.py
vae_mlp_latent_10_results/: NN-estimated-parameters.npy
vae_training/: train_vae.py
vae_training_scripts/: data_loading.py  evaluate_model.py  main.py  plotting.py  training.py  utils.py
(+31 files in other folders)
