[project]
name = "irida-trials"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.1.1",
    "scipy>=1.14.1",
    "matplotlib>=3.9.2",
    "ipykernel>=6.29.5",
    "pandas>=2.2.3",
    "black>=24.10.0",
    "torch>=2.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[tool.hatch.build.targets.wheel]
packages = ["src/foo"]
